--- a/css/animation.css
+++ b/css/animation.css
@@ -30,7 +30,7 @@
 
 /* Esercizio 4 */
 .ex-4-square {
-    transition: 1s;
+    transition: .5s;
 }
 
 .ex-4-square:hover {
@@ -106,7 +106,7 @@
 
 /* Esercizio 11 */
 .ex-11-icon {
-    animation: giragira 2s linear;
+    animation: giragira 2s linear infinite;
 }
 
 @keyframes giragira {
@@ -123,6 +123,90 @@
 
 /* Esercizio 12 */
 .ex-12-button:hover .ex-12-top-white {
-    animation: girabianco 2s linear;
+    animation: soprabianco 2s linear;
+}
+@keyframes soprabianco {
+    0% {
+        left: 10%;
+    }
+    50% {
+        left: calc(100% - 60px);
+    }
+    100% {
+        left: 0%;
+    }
+}
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: sottobianco 1s linear;
+}
+@keyframes sottobianco {
+    0% {
+        right: 20%;
+    }
+    50% {
+        right: calc(100% - 60px);
+    }
+    100% {
+        right: 0%;
+    }
+}
+
+.ex-13-button:hover .ex-13-top-white {
+    animation: partesoprabianco 2s linear;
+}
+@keyframes partesoprabianco {
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+    30% {
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    45% {
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+    75% {
+        left: 0;
+        top: 100%;
+    }
+    90% {
+        left: -15px;
+        top: -10px;
+    }
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+}
+.ex-13-button:hover .ex-13-bottom-white {
+    animation: partesottobianco 2s linear;
+}
+@keyframes partesottobianco {
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+    30% {
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+    45% {
+        right: calc(100% - 30px);
+        bottom: 100%;
+    }
+    75% {
+        right: 0;
+        bottom: 100%;
+    }
+    90% {
+        right: -15px;
+        bottom: -10px;
+    }
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
 }
 
